adding roles to User

--- a/public/css/customStyle.css
+++ b/public/css/customStyle.css
@@ -1,10 +1,25 @@
 .add-material-btn {
     position: absolute;
-    right: 5%;
+    right: 2%;
     z-index: 10;
-    top: 8%;
+    top: 15%;
+    transform: translate(-15%, -2%);
+}
+@media only screen and (max-width: 768px) {
+    .add-material-btn {
+        position: absolute;
+        right: 0;
+        z-index: 10;
+        top: 15%;
+        width: 90px;
+        height: 35px;
+        padding: 0;
+        margin: 0;
+        transform: translate(-15%, 0);
+    }
 }
 .table-responsive table {
     width: 100% !important;
     overflow-x: auto !important;
 }
+
